Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 
 <p>Securing UDP</p>
 
+<h2>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2>
+
+<p>(MIT)</p>
+
+<p>Copyright (c) 2016 Tom Zhou(<a href="mailto:iwebpp@gmail.com">iwebpp@gmail.com</a>)</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/InstantWebP2P/sudp">Sudp</a> is maintained by <a href="https://github.com/InstantWebP2P">InstantWebP2P</a>.</span>
 
